# VisualAlgorithms

./: .gitignore  CMakeLists.txt  README.md  Real_World_Algorithms.cpp  Real_World_Algorithms.h  Real_World_Algorithms.sln
.github/workflows/: msbuild.yml
AlgorithmsVisualisationQt/: AlgorithmsVisualisationQt.cpp  CMakeLists.txt  camera_menu.cpp  camera_menu.h  color_picker.cpp  color_picker.h  component_states.cpp  component_states.h  enums.h  graph_common_config.json  graph_menu.cpp  graph_menu.h  light_menu.cpp  light_menu.h  main_window.cpp  main_window.h  property_camera.cpp  property_camera.h  property_camera_controller.h  property_light.cpp  property_light.h  property_macros.h  property_material.cpp  property_material.h  property_mesh.cpp  property_mesh.h  property_transform.h  qdebug_helper.h  qlinemesh.cpp  qlinemesh.h  scene_entities_common_graph.cpp  scene_entities_common_graph.h  scene_properties_common_graph.cpp  scene_properties_common_graph.h  sorting_menu.cpp  sorting_menu.h  vWindow.cpp  vWindow.h  viewport_window.cpp  viewport_window.h  (+1 more)
AlgorithmsVisualisationQt/3d/: qlinemesh.cpp  qlinemesh.h
AlgorithmsVisualisationQt/main/: graph_menu.cpp  graph_menu.h  main_window.cpp  main_window.h  sorting_menu.h  viewport_window.cpp  viewport_window.h
AlgorithmsVisualisationQt/properties/: component_states.cpp  component_states.h  property_camera.cpp  property_camera.h  property_camera_controller.cpp  property_camera_controller.h  property_light.cpp  property_light.h  property_material.cpp  property_material.h  property_mesh.cpp  property_mesh.h  property_transform.cpp  xyz_picker.cpp  xyz_picker.h
AlgorithmsVisualisationQt/scenes/: scene_entities_common_graph.cpp  scene_entities_common_graph.h  scene_properties_common_graph.h
AlgorithmsVisualisationQt/settings/common_graph/camera/camera/: camera_settings.json
AlgorithmsVisualisationQt/settings/common_graph/camera/camera_controller/: current_camera_controller_type_settings.json  first_person_settings.json  orbit_settings.json
AlgorithmsVisualisationQt/settings/common_graph/edge/material/: current_material_index_settings.json  diffuse_map_settings.json  diffuse_specular_map_settings.json  diffuse_specular_settings.json  normal_diffuse_map_settings.json  normal_diffuse_specular_map_settings.json  phong_settings.json
AlgorithmsVisualisationQt/settings/common_graph/edge/mesh/: cone_settings.json  cylinder_settings.json
AlgorithmsVisualisationQt/settings/common_graph/light/light/: current_light_index_settings.json  directional_settings.json  point_settings.json  spot_settings.json
AlgorithmsVisualisationQt/settings/common_graph/plane/material/: current_material_index_settings.json  diffuse_specular_settings.json  gooch_settings.json  metal_rough_settings.json  normal_diffuse_map_settings.json  phong_alpha_settings.json  phong_settings.json
AlgorithmsVisualisationQt/settings/common_graph/plane/mesh/: cone_settings.json  cuboid_settings.json  current_mesh_index_settings.json  cylinder_settings.json  plane_settings.json  sphere_settings.json  torus_settings.json
AlgorithmsVisualisationQt/settings/common_graph/vertex/material/: current_material_index_settings.json  diffuse_map_settings.json  gooch_settings.json  metal_rough_settings.json  morph_phong_settings.json  normal_diffuse_specular_map_settings.json  phong_alpha_settings.json  phong_settings.json
AlgorithmsVisualisationQt/settings/common_graph/vertex/mesh/: cone_settings.json  cuboid_settings.json  current_mesh_index_settings.json  cylinder_settings.json  plane_settings.json  sphere_settings.json  torus_settings.json
AlgorithmsVisualisationQt/utilities/: enums.h  property_macros.h  qdebug_helper.h
GraphsVisualisationOLCGE/: CMakeLists.txt  GraphsVisualisationOLCGE.cpp
QLineMesh_test/: CMakeLists.txt  main.cpp  qlinemesh_test.cpp  qlinemesh_test.h
QObjectPicker_test/: CMakeLists.txt  main.cpp  qobjectpicker_test.cpp  qobjectpicker_test.h
Real_World_Algorithms/: CMakeLists.txt  Real_World_Algorithms.cpp  Real_World_Algorithms.h  Real_World_Algorithms.vcxproj  Real_World_Algorithms.vcxproj.filters
cmake/: MessageProperty.cmake  OLCGEFetch.cmake  QtModulePrepare.cmake  TimedelayFetch.cmake
docs/: _algorithms_visualisation_qt_8cpp_source.html  _real___world___algorithms_8cpp_source.html  _real___world___algorithms_8h_source.html  annotated.html  annotated_dup.js  camera__menu_8cpp_source.html  camera__menu_8h_source.html  class_calc-members.html  class_calc.html  class_calc.js  class_i_n_l_i_n_e___s_o_u_r_c_e_s___t_e_s_t_1_1c-members.html  class_i_n_l_i_n_e___s_o_u_r_c_e_s___t_e_s_t_1_1c.html  class_i_n_l_i_n_e___s_o_u_r_c_e_s___t_e_s_t_1_1c__-members.html  class_i_n_l_i_n_e___s_o_u_r_c_e_s___t_e_s_t_1_1c__.html  class_q_line_mesh-members.html  class_q_line_mesh.html  class_q_line_mesh.js  class_q_line_mesh__inherit__graph.dot  classbracers-members.html  classbracers.html  classbracers.js  classc-members.html  classc.html  classc__-members.html  classc__.html  classcamera__menu-members.html  classcamera__menu.html  classcamera__menu.js  classcamera__menu__inherit__graph.dot  classcolor__picker-members.html  classcolor__picker.html  classcolor__picker.js  classcolor__picker__inherit__graph.dot  classcomponent__states-members.html  classcomponent__states.html  classcomponent__states.js  classcomponent__states__coll__graph.dot  classes.html  classgraph__menu-members.html  classgraph__menu.html  (+193 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  enums_1.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_2.js  functions_3.js  (+16 more)
test/: test.cpp
